<resources>
    <string name="app_name">GitProfile</string>

    <!-- Strings for Profile Screen -->
    <string name="profile">Profile</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="pinned">Pinned</string>
    <string name="view_all"><u>View all</u></string>
    <string name="top_repositories">Top repositories</string>
    <string name="starred_repositories">Starred repositories</string>
    <string name="name_label">Full Name</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="count_label">0</string>
    <string name="repo_name_label">Repository Name</string>
    <string name="repo_desc_label">Repository Description</string>
    <string name="language_label">Language</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="error_in_github_access_token">Please set Github Personal Access Token in config.properties file.</string>
</resources>