<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/pinned_card_height"
    android:background="@color/colorBackground">

    <!-- A CardView that contains a Repository info -->
    <com.google.android.material.card.MaterialCardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/PinnedCardStyle">

        <LinearLayout
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Top Section -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/app_horizontal_margin_small"
                android:layout_marginTop="@dimen/app_vertical_margin"
                android:layout_height="@dimen/card_top_section_height">
                <androidx.cardview.widget.CardView
                    card_view:cardCornerRadius="@dimen/small_avatar_cornder_radius"
                    android:layout_width="@dimen/small_avatar_size"
                    android:layout_height="@dimen/small_avatar_size">
                    <ImageView
                        android:id="@+id/owner_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorDivider"></ImageView>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/owner_textview"
                    android:text="@string/username_label"
                    style="@style/DefaultTextStyle"
                    android:gravity="left|center"
                    android:layout_marginHorizontal="@dimen/app_horizontal_margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>

            <!-- Repository name and description -->
            <TextView
                android:id="@+id/name_textview"
                android:text="@string/repo_name_label"
                style="@style/DefaultBoldTextStyle"
                android:layout_marginStart="@dimen/app_horizontal_margin_small"
                android:layout_marginTop="@dimen/app_vertical_margin_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_default_height">
            </TextView>

            <TextView
                android:id="@+id/desc_textview"
                style="@style/DefaultTextStyle"
                android:text="@string/repo_desc_label"
                android:layout_marginStart="@dimen/app_horizontal_margin_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_default_height">
            </TextView>

            <!-- Bottom Section with Stars and Primary Language -->
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="left|center"
                android:layout_marginStart="@dimen/app_horizontal_margin_small"
                android:layout_marginTop="@dimen/app_vertical_margin_small"
                android:layout_marginBottom="@dimen/app_vertical_margin_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_default_height">

                <ImageView
                    android:src="@drawable/star"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:layout_width="12dp"
                    android:layout_height="12dp">
                </ImageView>
                <TextView
                    android:id="@+id/starred_textview"
                    style="@style/DefaultTextStyle"
                    android:layout_marginStart="@dimen/app_horizontal_margin_small"
                    android:text="@string/count_label"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/textview_default_height">
                </TextView>
                <!-- Primary Language -->
                <ImageView
                    android:src="@drawable/oval"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/app_horizontal_margin"
                    android:layout_width="10dp"
                    android:layout_height="10dp">
                </ImageView>
                <TextView
                    android:id="@+id/language_textview"
                    style="@style/DefaultTextStyle"
                    android:layout_marginStart="@dimen/app_horizontal_margin_small"
                    android:text="@string/language_label"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/textview_default_height">
                </TextView>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
